fix(#55): overflow auto

--- a/static/ipynb.css
+++ b/static/ipynb.css
@@ -3,7 +3,7 @@
 *[class^="ipynb-cell-"] { position: relative; }
 .ipynb-output-execution-result {
     position: relative;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 .ipynb-execution-count {
